--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
-MONGO = mongodb+srv://sumit:mongo@cluster0.vjxdrij.mongodb.net/portal?retryWrites=true&w=majority&appName=Cluster0
+MONGO = mongodb+srv://scholarshipPortal:portal@cluster0.0djbslv.mongodb.net/portal?retryWrites=true&w=majority&appName=Cluster0
 
+JWT_SECRET_KEY = scholarshipPortal
