--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "axios": "^1.6.8",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.1",
+    "mongoose": "^8.3.4",
     "months": "^2.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
